--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
     <h1>Hernandez Santiago Yazmin Amairani
-        Perez Mendez Jose Uriel</h1>
+        Perez Mendez Jose Uriel
+        Andrade Mora Marco Antonio</h1>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
